CDA-1545 update docs on BigQuery project
Signed-off-by: Alexander Diemand <codieplusplus@apax.net>

--- a/content/07-cardano-components/05-cardano-db-sync/05-big-query.mdx
+++ b/content/07-cardano-components/05-cardano-db-sync/05-big-query.mdx
@@ -3,6 +3,13 @@ title: Cardano blockchain data on BigQuery
 metaTitle: Cardano blockchain data on BigQuery
 ---
 
+## Cardano on-chain data on BigQuery
+
+We maintain a dedicated site with documentation and example queries:
+
+[input-output-hk/data-analytics-bigquery](https://github.com/input-output-hk/data-analytics-bigquery/wiki)
+
+
 ## About BigQuery
 
 According to its
@@ -111,660 +118,9 @@ shows the results of data validation for all tables.
 
 ## Query table schemas
 
-Access the maintained [Cardano on BigQuery - data schema browser](https://datastudio.google.com/reporting/0d60645a-95dd-4531-b85d-7b811fadc351).
+Access our [Cardano on BigQuery - data schema browser](https://datastudio.google.com/reporting/0d60645a-95dd-4531-b85d-7b811fadc351).
 
-The following tables are available in the dataset:
-
-1.  Table: block
-2.  Table: block_hash
-3.  Table: collateral
-4.  Table: cost_model
-5.  Table: datum
-6.  Table: delegation
-7.  Table: epoch_param
-8.  Table: ma_minting
-9.  Table: meta
-10. Table: param_proposal
-11. Table: pool_offline_data
-12. Table: pool_owner
-13. Table: pool_retire
-14. Table: pool_update
-15. Table: redeemer
-16. Table: rel_addr_txout
-17. Table: rel_stake_txout
-18. Table: reward
-19. Table: schema_version
-20. Table: script
-21. Table: stake_registration
-22. Table: tx
-23. Table: tx_consumed_output
-24. Table: tx_hash
-25. Table: tx_in_out
-26. Table: tx_metadata
-27. Table: withdrawal
-
-
-![](https://ucarecdn.com/d8ba0e26-a9f8-4c0b-be95-94a4d93a5dc4/)
-
-<a name="1-Table-block">1. Table: block</a>
-
-The `block` table is clustered by field `epoch_no` and is usually accessed using
-`epoch_no` and `slot_no`. See the `Table: block_hash` example bellow.
-The creator of the block (slot leader) is indicated in field `pool_hash`.
-
-| Field name      | Data type | Options  | Clustered |
-| --------------- | --------- | -------- | --------- |
-| epoch_no        | INTEGER   | REQUIRED | 1         |
-| slot_no         | INTEGER   | REQUIRED | 2         |
-| block_time      | DATETIME  | REQUIRED |           |
-| block_size      | INTEGER   | REQUIRED |           |
-| tx_count        | INTEGER   | REQUIRED |           |
-| sum_tx_fee      | INTEGER   | REQUIRED |           |
-| script_count    | INTEGER   | REQUIRED |           |
-| sum_script_size | INTEGER   | REQUIRED |           |
-| pool_hash       | STRING    | NULLABLE |           |
-
-<a name="2-Table-block_hash">2. Table: block_hash</a>
-
-The `block_hash` table is clustered by field `epoch_no` and relates `slot_no` to
-`block_hash`. If the `slot_no` is NULL, then the block is from the genesis.
-
-| Field name | Data type | Options  | Clustered |
-| ---------- | --------- | -------- | --------- |
-| epoch_no   | INTEGER   | REQUIRED | 1         |
-| slot_no    | INTEGER   | NULLABLE |           |
-| block_hash | STRING    | REQUIRED |           |
-
-**An example of searching a block by its hash:**
-
-```
-SELECT block.* FROM `iog-data-analytics.cardano_mainnet.block_hash` AS bh
-JOIN `iog-data-analytics.cardano_mainnet.block` AS block
-  ON block.slot_no = bh.slot_no
- AND block.epoch_no = bh.epoch_no
-WHERE bh.block_hash = '00b6c4bd4024cbf66050fe978f880a7129149be7a1a01310b3e3055053d563b2'
-  AND bh.epoch_no = 329;
-```
-
-<a name="3-Table-collateral">3. Table: collateral</a>
-
-The `collateral` table relates a transaction `(slot_no,txidx)` with its collateral inputs (that
-are unspent transaction outputs: `(slot_no_out,txidx_out,tx_out_index)`). It is clustered by the field `epoch_no`
-(relating to tx_in, when the collateral was provided).
-
-| Field name   | Data type | Options  | Clustered |
-| ------------ | --------- | -------- | --------- |
-| epoch_no     | INTEGER   | REQUIRED | 1         |
-| slot_no      | INTEGER   | REQUIRED |           |
-| txidx        | INTEGER   | REQUIRED |           |
-| epoch_no_out | INTEGER   | REQUIRED |           |
-| slot_no_out  | INTEGER   | REQUIRED |           |
-| txidx_out    | INTEGER   | REQUIRED |           |
-| tx_out_index | INTEGER   | REQUIRED |           |
-
-<a name="4-Table-cost_model">4. Table: cost_model</a>
-
-CostModel for EpochParam and ParamProposal. The field `costs` lists the actual costs
-formatted as JSON value.
-
-| Field name      | Data type | Options  | Clustered |
-| --------------- | --------- | -------- | --------- |
-| epoch_no        | INTEGER   | REQUIRED |           |
-| slot_no         | INTEGER   | REQUIRED |           |
-| costs           | JSON      | REQUIRED |           |
-| cost_model_hash | STRING    | REQUIRED |           |
-
-<a name="5-Table-datum">5. Table: datum</a>
-
-The `datum` table provides information about "Plutus Datum", found in witnesses or inlined in outputs.
-The pair (slot_no, txidx) points to the transaction where this datum (by `datum_hash`) first became available.
-The data is available as CBOR encoded data in `bytes` or as JSON value in `value`.
-
-| Field name      | Data type | Options  | Clustered |
-| --------------- | --------- | -------- | --------- |
-| epoch_no        | INTEGER   | REQUIRED | 1         |
-| slot_no         | INTEGER   | REQUIRED | 2         |
-| txidx           | INTEGER   | REQUIRED |           |
-| datum_hash      | STRING    | REQUIRED |           |
-| bytes           | BYTES     | REQUIRED |           |
-| value           | JSON      | REQUIRED |           |
-
-<a name="5-Table-delegation">6. Table: delegation</a>
-
-The `delegation` table provides information about delegations. It is clustered
-by `epoch_no` and `stake_addr_hash`. The `epoch_no` is the epoch of the
-transaction that contained the delegation. The `delegations` JSON field is a
-list of fields of: (cert_index, pool_hash, tx_hash, active_epoch_no, slot_no,
-txidx)
-
-| Field name      | Data type | Options  | Clustered |
-| --------------- | --------- | -------- | --------- |
-| epoch_no        | INTEGER   | REQUIRED | 1         |
-| stake_addr_hash | STRING    | REQUIRED |           |
-| delegations     | JSON      | REQUIRED |           |
-
-example data:
-
-| epoch_no | stake_addr_hash                                            | delegations                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
-| -------- | ---------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| 210      | e1000988fdc947892b93da25328e16d9911b479454cee287affb59810b | [{""pool_hash"" : ""65ea43eab7c0143d6bb68f9d56c276bce09377bdc41e1a42ac9535ed"", ""cert_index"" : 1, ""tx_hash"" : ""e689ab28a66086a7cba37b4ae2881b4cae99263a7e3ec24335ab15a61fd59af9"", ““active_epoch_no””:212, ""slot_no"" : 4714600, ""txidx"" : 0}]"                                                                                                                                                                                                                                                        |
-| 210      | e100133b1980c19219944b78c3d63eb914a29861afebc723367bd6a390 | [{""pool_hash"" : ""1d46e6eaa039ad1d6f4e53200a9c49c6d2693da6207006876455e6e4"", ""cert_index"" : 0, ""tx_hash"" : ""2d667308c2f41cdfe936bdcf8448f62674de6799a8fa9843cfc7228a89f15232"", ““active_epoch_no””:212, ""slot_no"" : 4543820, ""txidx"" : 1}, {""pool_hash"" : ""60397646d7d1ad6fe2ddccfe7efc9cba61f6d3d94d29e8f41de73240"", ""cert_index"" : 1, ""tx_hash"" : ""c5ae6ff25716d3cc08ff94a5178ac857ecf0cc5a31e8b35abd0b17fa7a20c386"", ““active_epoch_no””:212, ""slot_no"" : 4524540, ""txidx"" : 3}]" |
-
-<a name="6-Table-epoch_param">7. Table: epoch_param</a>
-
-The `epoch_param` table contains the accepted protocol parameters for an epoch.
-Table `epoch_param` is very small and accessed by `epoch_no`.
-
-| Field name            | Data type | Options  | Clustered |
-| --------------------- | --------- | -------- | --------- |
-| epoch_no              | INTEGER   | REQUIRED |           |
-| min_fee_a             | INTEGER   | REQUIRED |           |
-| min_fee_b             | INTEGER   | REQUIRED |           |
-| max_block_size        | INTEGER   | REQUIRED |           |
-| max_tx_size           | INTEGER   | REQUIRED |           |
-| max_bh_size           | INTEGER   | REQUIRED |           |
-| key_deposit           | INTEGER   | REQUIRED |           |
-| pool_deposit          | INTEGER   | REQUIRED |           |
-| max_epoch             | INTEGER   | REQUIRED |           |
-| optimal_pool_count    | INTEGER   | REQUIRED |           |
-| influence             | NUMERIC   | REQUIRED |           |
-| monetary_expand_rate  | NUMERIC   | REQUIRED |           |
-| treasury_growth_rate  | NUMERIC   | REQUIRED |           |
-| decentralisation      | NUMERIC   | REQUIRED |           |
-| entropy               | STRING    | NULLABLE |           |
-| protocol_major        | INTEGER   | REQUIRED |           |
-| protocol_minor        | INTEGER   | REQUIRED |           |
-| min_utxo_value        | INTEGER   | REQUIRED |           |
-| min_pool_cost         | INTEGER   | REQUIRED |           |
-| nonce                 | STRING    | NULLABLE |           |
-| coins_per_utxo_word   | INTEGER   | NULLABLE |           |
-| cost_model_id         | INTEGER   | NULLABLE |           |
-| price_mem             | NUMERIC   | NULLABLE |           |
-| price_step            | NUMERIC   | NULLABLE |           |
-| max_tx_ex_mem         | INTEGER   | NULLABLE |           |
-| max_tx_ex_steps       | INTEGER   | NULLABLE |           |
-| max_block_ex_mem      | INTEGER   | NULLABLE |           |
-| max_block_ex_steps    | INTEGER   | NULLABLE |           |
-| max_val_size          | INTEGER   | NULLABLE |           |
-| collateral_percent    | INTEGER   | NULLABLE |           |
-| max_collateral_inputs | INTEGER   | NULLABLE |           |
-
-<a name="7-Table-ma_minting">8. Table: ma_minting</a>
-
-The `ma_minting` table contains all the unique policy/name pairs with a CIP14
-asset fingerprint. It also contains the multi-Asset mint events. The table is
-clustered by `epoch_no` and `fingerprint`. The `minting` JSON field is a list of
-triples of transaction identifier and quantity (slot_no, txidx, quantity).
-
-| Field name  | Data type | Options  | Clustered |
-| ----------- | --------- | -------- | --------- |
-| epoch_no    | INTEGER   | REQUIRED | 1         |
-| fingerprint | STRING    | REQUIRED | 2         |
-| policyid    | STRING    | REQUIRED |           |
-| name_bytes  | BYTES     | REQUIRED |           |
-| minting     | JSON      | REQUIRED |           |
-
-example data:
-
-| fingerprint                                  | policyid                                                 | name (base64 encoded) | epoch_no | minting transactions                                                                       |
-| -------------------------------------------- | -------------------------------------------------------- | --------------------- | -------- | ------------------------------------------------------------------------------------------ |
-| asset1j84xh47st88tz7d55exfu2daurvrvycnc0xy2p | 53cc838e833f2e3f1deaaa5efd7ccbe3fc0d285c2bec879ad4ef3677 | Vk9PRE9PVEVERFlCRUFS  | 337      | [{"slot_no":60265049,"txidx":3,"quantity":1},{"slot_no":60455411,"txidx":25,"quantity":1}] |
-
-<a name="8-Table-meta">9. Table: meta</a>
-
-The `meta` table provides information about network start time and db-sync
-version.
-
-| Field name   | Data type | Options  | Clustered |
-| ------------ | --------- | -------- | --------- |
-| start_time   | DATETIME  | REQUIRED |           |
-| network_name | STRING    | REQUIRED |           |
-| version      | STRING    | REQUIRED |           |
-
-<a name="9-Table-param_proposal">10. Table: param_proposal</a>
-
-The `param_proposal` table contains blockchain parameter change proposals. It is
-clustered by `epoch_no`.
-
-| Field name            | Data type | Options  | Clustered |
-| --------------------- | --------- | -------- | --------- |
-| epoch_no              | INTEGER   | REQUIRED | 1         |
-| key                   | STRING    | REQUIRED |           |
-| min_fee_a             | INTEGER   | NULLABLE |           |
-| min_fee_b             | INTEGER   | NULLABLE |           |
-| max_block_size        | INTEGER   | NULLABLE |           |
-| max_tx_size           | INTEGER   | NULLABLE |           |
-| max_bh_size           | INTEGER   | NULLABLE |           |
-| key_deposit           | INTEGER   | NULLABLE |           |
-| pool_deposit          | INTEGER   | NULLABLE |           |
-| max_epoch             | INTEGER   | NULLABLE |           |
-| optimal_pool_count    | INTEGER   | NULLABLE |           |
-| influence             | NUMERIC   | NULLABLE |           |
-| monetary_expand_rate  | NUMERIC   | NULLABLE |           |
-| treasury_growth_rate  | NUMERIC   | NULLABLE |           |
-| decentralisation      | NUMERIC   | NULLABLE |           |
-| entropy               | STRING    | NULLABLE |           |
-| protocol_major        | INTEGER   | NULLABLE |           |
-| protocol_minor        | INTEGER   | NULLABLE |           |
-| min_utxo_value        | INTEGER   | NULLABLE |           |
-| min_pool_cost         | INTEGER   | NULLABLE |           |
-| coins_per_utxo_word   | INTEGER   | NULLABLE |           |
-| cost_model_id         | INTEGER   | NULLABLE |           |
-| price_mem             | NUMERIC   | NULLABLE |           |
-| price_step            | NUMERIC   | NULLABLE |           |
-| max_tx_ex_mem         | INTEGER   | NULLABLE |           |
-| max_tx_ex_steps       | INTEGER   | NULLABLE |           |
-| max_block_ex_mem      | INTEGER   | NULLABLE |           |
-| max_block_ex_steps    | INTEGER   | NULLABLE |           |
-| max_val_size          | INTEGER   | NULLABLE |           |
-| collateral_percent    | INTEGER   | NULLABLE |           |
-| max_collateral_inputs | INTEGER   | NULLABLE |           |
-| registered_tx_slot_no | INTEGER   | REQUIRED |           |
-| registered_tx_index   | INTEGER   | REQUIRED |           |
-
-<a name="10-Table-pool_offline_data">11. Table: pool_offline_data</a>
-
-The `pool_offline_data` table contains information about off chain pool data. It
-is sliced by `epoch_no`, which is the epoch of the transaction that the metadata
-was registered.
-
-| Field name                  | Data type | Options  | Clustered |
-| --------------------------- | --------- | -------- | --------- |
-| epoch_no                    | INTEGER   | REQUIRED | 1         |
-| pool_hash                   | STRING    | REQUIRED |           |
-| ticker_name                 | STRING    | REQUIRED |           |
-| json                        | STRING    | REQUIRED |           |
-| metadata_url                | STRING    | REQUIRED |           |
-| metadata_hash               | BYTES     | REQUIRED |           |
-| metadata_registered_tx_hash | STRING    | REQUIRED |           |
-
-<a name="11-Table-pool_owner">12. Table: pool_owner</a>
-
-This table provides information about pool owners. It is a mapping of pool
-hashes to addresses that were registered as pool owners on a specific
-transaction (slot, transaction index combination). It is clustered by
-`epoch_no`.
-
-| Field name | Data type | Options  | Clustered |
-| ---------- | --------- | -------- | --------- |
-| epoch_no   | INTEGER   | REQUIRED | 1         |
-| pool_hash  | STRING    | REQUIRED |           |
-| addr_hash  | STRING    | REQUIRED |           |
-| slot_no    | INTEGER   | REQUIRED |           |
-| txidx      | INTEGER   | REQUIRED |           |
-
-<a name="12-Table-pool_retire">13. Table: pool_retire</a>
-
-This table provides information about the retirement of pools. It is sliced by
-`epoch_no` which is the epoch that the pool retirement was announced.
-
-| Field name        | Data type | Options  | Clustered |
-| ----------------- | --------- | -------- | --------- |
-| epoch_no          | INTEGER   | REQUIRED | 1         |
-| pool_hash         | STRING    | REQUIRED |           |
-| retiring_epoch    | INTEGER   | REQUIRED |           |
-| cert_index        | INTEGER   | REQUIRED |           |
-| announced_tx_hash | STRING    | REQUIRED |           |
-| slot_no           | INTEGER   | REQUIRED |           |
-| announced_txidx   | INTEGER   | REQUIRED |           |
-
-<a name="13-Table-pool_update">14. Table: pool_update</a>
-
-The `pool_update` table provides information about pool updates. It is sliced by
-`epoch_no` which is the epoch number of the transaction that contained the
-update.
-
-| Field name                  | Data type | Options  | Clustered |
-| --------------------------- | --------- | -------- | --------- |
-| active_epoch_no             | INTEGER   | REQUIRED |           |
-| pool_hash                   | STRING    | REQUIRED |           |
-| cert_index                  | INTEGER   | REQUIRED |           |
-| vrf_key_hash                | STRING    | REQUIRED |           |
-| pledge                      | NUMERIC   | REQUIRED |           |
-| reward_addr                 | STRING    | REQUIRED |           |
-| margin                      | NUMERIC   | REQUIRED |           |
-| fixed_cost                  | NUMERIC   | REQUIRED |           |
-| registered_tx_hash          | STRING    | REQUIRED |           |
-| epoch_no                    | INTEGER   | REQUIRED | 1         |
-| metadata_url                | STRING    | NULLABLE |           |
-| metadata_hash               | STRING    | NULLABLE |           |
-| metadata_registered_tx_hash | STRING    | NULLABLE |           |
-
-<a name="14-Table-redeemer">15. Table: redeemer</a>
-
-Per transaction, multiple redeemers are present with different purpose (spend,
-mint) and increasing indexes in those. The table is clustered by the fields
-`epoch_no` and `slot_no` for fast access.
-
-| Field name | Data type | Options  | Clustered |
-| ---------- | --------- | -------- | --------- |
-| epoch_no   | INTEGER   | REQUIRED | 1         |
-| slot_no    | INTEGER   | REQUIRED |           |
-| txidx      | INTEGER   | REQUIRED |           |
-| count      | INTEGER   | REQUIRED |           |
-| redeemers  | JSON      | REQUIRED |           |
-
-Example (tx =
-[7dd290b7b4c628ecc97f4420f616cad01089d906e9b6eb7dc3cf7eee17ecbdf5](https://explorer.cardano.org/en/transaction?id=7dd290b7b4c628ecc97f4420f616cad01089d906e9b6eb7dc3cf7eee17ecbdf5)):
-epoch_no:315 slot_no:51124409 txidx:7 count:4
-
-redeemers:
-
-```
-[
-  {
-    "purpose": "spend",
-    "index": 0,
-    "unit_mem": 406484,
-    "unit_steps": 161323341,
-    "fee": 35086,
-    "script_hash": "ba158766c1bae60e2117ee8987621441fac66a5e0fb9c7aca58cf20a",
-    "datum_hash": "923918e403bf43c34b4ef6b48eb2ee04babed17320d8d1b9ff9ad086e86f44ec",
-    "datum_value": {
-      "fields": [],
-      "constructor": 0
-    }
-  },
-  {
-    "purpose": "spend",
-    "index": 2,
-    "unit_mem": 5921693,
-    "unit_steps": 2128218978,
-    "fee": 495127,
-    "script_hash": "4020e7fc2de75a0729c3cc3af715b34d98381e0cdbcfa99c950bc3ac",
-    "datum_hash": "e7dd0cd6f9f5b38884fad20820d47a9d5c8c8535a6f85dc799405c456846c4c3",
-    "datum_value": {
-      "fields": [
-        {
-          "bytes": "a530443d873077d730d57ffb4b223bec89d3dc9586d329eed357e4b3"
-        },
-        {
-          "bytes": "9c0a"
-        }
-      ],
-      "constructor": 0
-    }
-  },
-  {
-    "purpose": "spend",
-    "index": 3,
-    "unit_mem": 406484,
-    "unit_steps": 161323341,
-    "fee": 35086,
-    "script_hash": "ba158766c1bae60e2117ee8987621441fac66a5e0fb9c7aca58cf20a",
-    "datum_hash": "923918e403bf43c34b4ef6b48eb2ee04babed17320d8d1b9ff9ad086e86f44ec",
-    "datum_value": {
-      "fields": [],
-      "constructor": 0
-    }
-  },
-  {
-    "purpose": "mint",
-    "index": 0,
-    "unit_mem": 1019352,
-    "unit_steps": 376201711,
-    "fee": 85941,
-    "script_hash": "0029cb7c88c7567b63d1a512c0ed626aa169688ec980730c0473b913",
-    "datum_hash": "8aa7de35e4077406a27b546d5b49d998189708b95be495b348c4eade8d4f12d5",
-    "datum_value": {
-      "bytes": "04"
-    }
-  }
-]
-```
-
-<a name="15-Table-rel_addr_txout">16. Table: rel_addr_txout</a>
-
-The `rel_addr_txout` table is clustered by `epoch_no` and relates `address` to
-`outputs` in an epoch. The list of outputs are triples of (slot_no, txidx,
-index), thus the identification of the transaction by the pair of (slot_no,
-txidx) and then the output at index within the transaction.
-
-| Field name | Data type | Options  | Clustered |
-| ---------- | --------- | -------- | --------- |
-| epoch_no   | INTEGER   | REQUIRED | 1         |
-| address    | STRING    | REQUIRED |           |
-| outputs    | STRING    | REQUIRED |           |
-
-<a name="16-Table-rel_stake_txout">17. Table: rel_stake_txout</a>
-
-This table is clustered by `epoch_no` and relates `staking address` to `outputs`
-in an epoch.
-
-The list of outputs are triples of `slot_no`, `txidx`, and `index`, which
-identify the transaction by the pair of `slot_no` and `txidx` and then the
-output at index in the transaction.
-
-| Field name | Data type | Options  | Clustered |
-| ---------- | --------- | -------- | --------- |
-| epoch_no   | INTEGER   | REQUIRED | 1         |
-| address    | STRING    | REQUIRED |           |
-| outputs    | STRING    | REQUIRED |           |
-
-<a name="17-Table-reward">18. Table: reward</a>
-
-This table provides information about the rewards a stake address receives on a
-specific epoch. The table is sliced by `epoch_no` which is the reward’s
-spendable epoch.
-
-| Field name      | Data type | Options  | Clustered |
-| --------------- | --------- | -------- | --------- |
-| epoch_no        | INTEGER   | REQUIRED | 1         |
-| stake_addr_hash | STRING    | REQUIRED |           |
-| type            | STRING    | REQUIRED |           |
-| amount          | INTEGER   | REQUIRED |           |
-| earned_epoch    | INTEGER   | REQUIRED |           |
-| pool_hash       | STRING    | NULLABLE |           |
-
-<a name="18-Table-schema_version">19. Table: schema_version</a>
-
-This table provides information about db-sync database schema version. It should
-only ever have a single row.
-
-| Field name  | Data type | Options  | Clustered |
-| ----------- | --------- | -------- | --------- |
-| stage_one   | INTEGER   | REQUIRED |           |
-| stage_two   | INTEGER   | REQUIRED |           |
-| stage_three | INTEGER   | REQUIRED |           |
-
-<a name="19-Table-script">20. Table: script</a>
-
-A table containing scripts available, found in witnesses, inlined in outputs
-(reference outputs) or auxdata of transactions. It is sliced by `epoch_no`.
-
-| Field name      | Data type | Options  | Clustered |
-| --------------- | --------- | -------- | --------- |
-| epoch_no        | INTEGER   | REQUIRED | 1         |
-| slot_no         | INTEGER   | REQUIRED |           |
-| txidx           | INTEGER   | REQUIRED |           |
-| script_hash     | STRING    | REQUIRED |           |
-| type            | STRING    | REQUIRED |           |
-| json            | JSON      | NULLABLE |           |
-| bytes           | BYTES     | NULLABLE |           |
-| serialised_size | INTEGER   | NULLABLE |           |
-
-<a name="20-Table-stake_registration">21. Table: stake_registration</a>
-
-Table `stake_registration` provides information on when a stake address was
-registered. This table is sliced by `epoch_no`.
-
-| Field name      | Data type | Options  | Clustered |
-| --------------- | --------- | -------- | --------- |
-| epoch_no        | INTEGER   | REQUIRED | 1         |
-| stake_addr_hash | STRING    | REQUIRED |           |
-| cert_index      | INTEGER   | REQUIRED |           |
-| slot_no         | INTEGER   | REQUIRED |           |
-| txidx           | INTEGER   | REQUIRED |           |
-
-<a name="21-Table-tx">22. Table: tx</a>
-
-The `tx` table is clustered by field `epoch_no` and `slot_no`, and can
-efficiently be accessed using `epoch_no` or `slot_no`.
-
-A transaction is identified by the pair (`slot_no`, `txidx`), identifying the
-block of the transaction and transaction’s index in the block.
-
-| Field name     | Data type | Options  | Clustered |
-| -------------- | --------- | -------- | --------- |
-| epoch_no       | INTEGER   | REQUIRED | 1         |
-| tx_hash        | STRING    | REQUIRED |           |
-| block_time     | DATETIME  | REQUIRED |           |
-| slot_no        | INTEGER   | REQUIRED | 2         |
-| txidx          | INTEGER   | REQUIRED |           |
-| out_sum        | NUMERIC   | REQUIRED |           |
-| fee            | NUMERIC   | REQUIRED |           |
-| deposit        | NUMERIC   | REQUIRED |           |
-| size           | INTEGER   | REQUIRED |           |
-| invalid_before | NUMERIC   | NULLABLE |           |
-| invalid_after  | NUMERIC   | NULLABLE |           |
-| valid_script   | BOOL      | REQUIRED |           |
-| script_size    | INTEGER   | REQUIRED |           |
-| count_inputs   | INTEGER   | REQUIRED |           |
-| count_outputs  | INTEGER   | REQUIRED |           |
-
-<a name="22-Table-tx_consumed_output">23. Table: tx_consumed_output</a>
-
-This table is clustered by `slot_no` and contains information about which
-transaction outputs got consumed in other transactions: The transaction output
-that is identified by the triplet (`slot_no`, `txidx`, `index`), was consumed in
-transaction identified by the pair (`consumed_in_slot_no`, `consumed_in_txidx`).
-
-| Field name          | Data type | Options  | Clustered |
-| ------------------- | --------- | -------- | --------- |
-| slot_no             | INTEGER   | REQUIRED | 1         |
-| txidx               | INTEGER   | REQUIRED |           |
-| index               | INTEGER   | REQUIRED |           |
-| consumed_in_slot_no | INTEGER   | REQUIRED |           |
-| consumed_in_txidx   | INTEGER   | REQUIRED |           |
-
-<a name="23-Table-tx_hash">24. Table: tx_hash</a>
-
-The `tx_hash` table allows to quickly find the slot number and the transaction
-index in the block given that the hash has been incorporated. The table is
-clustered by `epoch_no`.
-
-| Field name | Data type | Options  | Clustered |
-| ---------- | --------- | -------- | --------- |
-| epoch_no   | INTEGER   | REQUIRED | 1         |
-| slot_no    | INTEGER   | REQUIRED |           |
-| txidx      | INTEGER   | REQUIRED |           |
-| tx_hash    | STRING    | REQUIRED |           |
-
-<a name="24-Table-tx_in_out">25. Table: tx_in_out</a>
-
-The `tx_in_out` table is clustered by field `epoch_no` and `slot_no`, and can
-efficiently be accessed using `epoch_no` or `slot_no`.
-
-Records contain a list of inputs to the transaction and outputs created by the transaction,
-identified by pairs (`slot_no`, `txidx`).
-
-| Field name | Data type | Options  | Clustered |
-| ---------- | --------- | -------- | --------- |
-| epoch_no   | INTEGER   | REQUIRED | 1         |
-| slot_no    | INTEGER   | REQUIRED | 2         |
-| txidx      | INTEGER   | REQUIRED |           |
-| inputs     | JSON      | NULLABLE |           |
-| outputs    | JSON      | NULLABLE |           |
-
-**Example**
-
-See an
-[example of transaction details here](https://explorer.cardano.org/en/transaction?id=3c943c2ce4de883a9dcf1c5b29d0794c2b043ac45a7e987eb9fe2ae0038c41bf).
-
-```
-epoch_no: 329
-slot_no: 56785711
-txidx: 0
-```
-
-This transaction consumes two inputs:
-
-```
-[
-  {
-    "in_slot_no": 56750312,
-    "in_txidx": 13,
-    "in_idx": 2
-  },
-  {
-    "in_slot_no": 56609945,
-    "in_txidx": 1,
-    "in_idx": 0
-  }
-]
-```
-
-and creates four outputs:
-
-```
-[
-  {
-    "out_idx": 0,
-    "out_address": "addr1q9cwvremt6n320s2e3agq0jyq82yhrk3htsu0w426xnz5us70z4w0jgvcdkkynmm8wmds66jd9kusnjfpu6raw5fqp0sr07p5w",
-    "out_value": 1000000,
-    "out_ma": null
-  },
-  {
-    "out_idx": 1,
-    "out_address": "addr1q894g0fpzjh8aj7mulfpca2wgwz0xznyzvc89y2yly8em75cxj5k9gax0h6lymuvnmf7qhqwu0y0hyxqk2xcfmnva3gqx9fpj7",
-    "out_value": 2500000,
-    "out_ma": null
-  },
-  {
-    "out_idx": 2,
-    "out_address": "addr1qy66guz87dm2dfy8efdx7gm43e3f5f369avgq9thrm5hsjcphuva29yz3chdrakhlds6r24rvyu2qtqjf4s0v2hx5essdgyk9j",
-    "out_value": 46500000,
-    "out_ma": null
-  },
-  {
-    "out_idx": 3,
-    "out_address": "addr1q9r7sqenl529jk7ylvht5t4k40t59h32f26k4annkdcnpj4shnq3sq2p4mr0940zqdfmfvgyr7p8zr720zdd3xkuygcqehzxum",
-    "out_value": 740462105,
-    "out_ma": [
-      {
-        "fingerprint": "asset18ry832pk9yye9d5fszehrd5yh3glkeclu40w23",
-        "quantity": 1
-      }
-    ]
-  }
-]
-```
-
-See the output of the
-[transaction on Cardano Explorer](https://explorer.cardano.org/en/transaction?id=3c943c2ce4de883a9dcf1c5b29d0794c2b043ac45a7e987eb9fe2ae0038c41bf).
-
-<a name="25-Table-tx_metadata">26. Table: tx_metadata</a>
-
-This table is clustered by `epoch_no` and relates a transaction with its
-metadata.
-
-| Field name | Data type | Options  | Clustered |
-| ---------- | --------- | -------- | --------- |
-| epoch_no   | INTEGER   | REQUIRED | 1         |
-| tx_hash    | STRING    | REQUIRED |           |
-| slot_no    | INTEGER   | REQUIRED |           |
-| txidx      | INTEGER   | REQUIRED |           |
-| metadata   | JSON      | REQUIRED |           |
-
-The metadata is indexed with an integer which we include in the JSON list of
-(“index”, “meta”) pairs:
-
-```
-[{"index":2112121520,"meta":{"Choices": [{"VoteWeight": 1, "CandidateId": "ea19c7ed-8151-4619-ba61-5415abdac0d2"}], "VoterId": "16e98564-0f2c-4519-b3ae-14c2403450d1", "NetworkId": "SPOCRA", "ObjectType": "VoteBallot", "ProposalId": "f5b3a098-5615-4dfc-95d6-53a4a3238d99", "ObjectVersion": "1.0.0"}}]
-```
-
-<a name="26-Table-withdrawal">27. Table: withdrawal</a>
-
-This table provides information about reward withdrawals. It is clustered by
-`epoch_no`.
-
-| Field name      | Data type | Options  | Clustered |
-| --------------- | --------- | -------- | --------- |
-| epoch_no        | INTEGER   | REQUIRED | 1         |
-| stake_addr_hash | STRING    | REQUIRED |           |
-| amount          | INTEGER   | REQUIRED |           |
-| slot_no         | INTEGER   | REQUIRED |           |
-| txidx           | INTEGER   | REQUIRED |           |
+The [wiki](https://github.com/input-output-hk/data-analytics-bigquery/wiki/Database-schema) also contains more information about the table schema.
 
 ## Further development
 
