--- a/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts/02-setup-development.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/03-deploy-smart-contracts/02-setup-development.mdx
@@ -2,7 +2,9 @@
 title: Set up development environment
 metaTitle: Set up development environment
 ---
-The Cardano sidechains toolkit supports three development environments
+
+The Cardano EVM sidechain testnet is EVM-compatible with most Ethereum software to develop and deploy smart contracts including:
+
 - [Remix](#remix)
 - [Hardhat](#hardhat)
 - [Truffle](#truffle)
@@ -25,7 +27,9 @@ In this tutorial, you will use MetaMask as your wallet and Web3 provider. If you
 
 If the solidity compiler and deploy plugins are not activated, then you can search and activate them using the plugin manager [5] located in the bottom-left of the screen.
 
-![remix-plugin]Open MetaMask and double-check the sidechain testnet is the selected network. This will ensure Remix connects to the correct network when you configure your environment in the next step.
+![remix-plugin](https://user-images.githubusercontent.com/10556209/202550289-1cd1e25a-b1c9-4e66-9600-fad710126c8d.png)
+
+Open MetaMask and double-check the sidechain testnet is the selected network. This will ensure Remix connects to the correct network when you configure your environment in the next step.
 
 ![meta-mask-atago](https://user-images.githubusercontent.com/10556209/200482306-af1c0f4d-9ecf-4078-b0a3-a411306d13d1.png)
 
@@ -85,27 +89,50 @@ To verify the smart contract was deployed on the sidechain testnet you can:
 - Check Remix logs for deployment details.
   
 # HardHat
-Install the following dependencies to set up a Hardhat development environment:
+This tutorial will show you how to deploy a solidity smart contract to the EVM sidechain testnet using Hardhat. [Hardhat](https://hardhat.org/) is a popular development enviorment for Ethereum software.
 
 - [Node.js v10](https://nodejs.org/en/) or later
 - [HardHat](https://hardhat.org/)
 
-Check Node.js and NPM is installed:
+## Prerequisites
+
+Hardhat is used in local NPM projects. Therefore, you will need NPM 7 or later.
+
+- Install Node.js version 15 or later using [NVM](https://github.com/nvm-sh/nvm).
 
 ```
-$ node --version
-$ npm --version
+$ nvm install 15 --lts
+$ nvm alias default 15
 ```
 
-Hardhat is used through a local npm project installation. If you don't yet have an npm project, then simply initialize a new one and install Hardhat:
+- Check Node/ NPM versions
 
 ```
-$ mkdir MyProject && cd MyProject # Create and enter into new project
-$ npm init # initialize npm project
-$ npm install --save-dev hardhat # install hardhat within the project
+$ node -v
+v15.14.0
+$ npm -v
+7.7.6
 ```
 
-To create your Hardhat project, run `npx hardhat` in your project folder. If this is a new Hardhat project simply select to *Create a sample project*:
+## Step 01 - Create a Hardhat Project
+
+For this tutorial we will create a new NPM project and initilize `npx hardhat` to bootstrap a sample JavaScript project that we will configure to deploy to the sidechain testnet.
+
+- Create a new project:
+
+```
+$ mkdir Hardhat/
+$ cd Hardhat/
+```
+
+- Initialize a new NPM project and install Hardhat locally:
+
+```
+$ npm init
+$ npm install --save-dev hardhat
+```
+
+To create the sample JavaScript project, run `npx hardhat` in your project folder and select to *Create a JavaScript project*.
 
 ```
 $ npx hardhat
@@ -118,21 +145,20 @@ $ npx hardhat
 888    888 888  888 888    Y88b 888 888  888 888  888 Y88b.
 888    888 "Y888888 888     "Y88888 888  888 "Y888888  "Y888
 
-Welcome to Hardhat v2.0.8
+👷 Welcome to Hardhat v2.9.9 👷‍
 
 ? What do you want to do? …
-❯ Create a sample project
-  Create an advanced sample project
-  Create an advanced sample project that uses TypeScript
+❯ Create a JavaScript project
+  Create a TypeScript project
   Create an empty hardhat.config.js
   Quit
 ```
 
-Hardhat will tell you to install `hardhat-waffle` and `hardhat-ethers` which is required for tests built with Waffle. In case you've missed it, install them by executing the following:
+<!-- Hardhat will tell you to install `hardhat-waffle` and `hardhat-ethers` which is required for tests built with Waffle. In case you've missed it, install them by executing the following:
 
 ```
 npm install --save-dev @nomiclabs/hardhat-waffle ethereum-waffle chai @nomiclabs/hardhat-ethers ethers
-```
+``` -->
 
 ## Running tasks
 
@@ -140,121 +166,97 @@ To view all options and commands with your Hardhat project, simply run `npx hard
 
 ```
 $ npx hardhat
-Hardhat version 2.0.8
+Hardhat version 2.12.2
 
 Usage: hardhat [GLOBAL OPTIONS] <TASK> [TASK OPTIONS]
 
 GLOBAL OPTIONS:
 
-  --config              A Hardhat config file.
-  --emoji               Use emoji in messages.
-  --help                Shows this message, or a task's help if its name is provided
-  --max-memory          The maximum amount of memory that Hardhat can use.
-  --network             The network to connect to.
-  --show-stack-traces   Show stack traces.
-  --tsconfig            A TypeScript config file.
-  --verbose             Enables Hardhat verbose logging
-  --version             Shows hardhat's version.
+  --config           	A Hardhat config file. 
+  --emoji            	Use emoji in messages. 
+  --flamegraph       	Generate a flamegraph of your Hardhat tasks 
+  --help             	Shows this message, or a task's help if its name is provided 
+  --max-memory       	The maximum amount of memory that Hardhat can use. 
+  --network          	The network to connect to. 
+  --show-stack-traces	Show stack traces (always enabled on CI servers). 
+  --tsconfig         	A TypeScript config file. 
+  --typecheck        	Enable TypeScript type-checking of your scripts/tests 
+  --verbose          	Enables Hardhat verbose logging 
+  --version          	Shows hardhat's version. 
 
 
 AVAILABLE TASKS:
 
-  accounts      Prints the list of accounts
-  check         Check whatever you need
-  clean         Clears the cache and deletes all artifacts
-  compile       Compiles the entire project, building all artifacts
-  console       Opens a hardhat console
-  flatten       Flattens and prints contracts and their dependencies
-  help          Prints this message
-  node          Starts a JSON-RPC server on top of Hardhat Network
-  run           Runs a user-defined script after compiling the project
-  test          Runs mocha tests
+  check             	Check whatever you need
+  clean             	Clears the cache and deletes all artifacts
+  compile           	Compiles the entire project, building all artifacts
+  console           	Opens a hardhat console
+  coverage          	Generates a code coverage report for tests
+  flatten           	Flattens and prints contracts and their dependencies
+  gas-reporter:merge	
+  help              	Prints this message
+  node              	Starts a JSON-RPC server on top of Hardhat Network
+  run               	Runs a user-defined script after compiling the project
+  test              	Runs mocha tests
+  typechain         	Generate Typechain typings for compiled contracts
+  verify            	Verifies contract on Etherscan
 
 To get help for a specific task run: npx hardhat help [task]
 ```
 
 If you need additional information on using Hardhat, then visit the official [Hardhat documentation](https://hardhat.org/getting-started/).
 
-## Configure Hardhat for EVM sidechains testnet
+## Step 02 - Configure Hardhat
 
-To configure Hardhat to target the EVM Sidechains testnet, we need to:
+Our sample JavaScript project contains a `hardhat.config.js` file. The `networks` config field is an optional object where network names map to their configuration and we can set `accounts` we want to sign transactions. For example:
 
-- Add EVM Sidechains network [details](/network/network-details).
-- Add an account private-key which will sign transactions and has `test FUEL` funds to pay for gas.
-  - Setup an account with MetaMask [here](/basics/metamask).
-  - Request `test FUEL` from the [Atago faucet](http://faucet-web.mamba.atago).
+```js
+require("@nomicfoundation/hardhat-toolbox");
 
-Take a look at the Hardhat configuration file (`hardhat.config.js`):
-
-```
-require("@nomiclabs/hardhat-waffle");
-
-// This is a sample Hardhat task. To learn how to create your own go to
-// https://hardhat.org/guides/create-task.html
-task("accounts", "Prints the list of accounts", async (taskArgs, hre) => {
-  const accounts = await hre.ethers.getSigners();
-
-  for (const account of accounts) {
-    console.log(account.address);
-  }
-});
-
-// You need to export an object to set up your config
-// Go to https://hardhat.org/config/ to learn more
-
-/**
- * @type import('hardhat/config').HardhatUserConfig
- */
-module.exports = {
-  solidity: "0.8.4",
-};
-```
-
-Replace the content of the config file with the following content and replace `INSERT_PRIV_KEY` with your private key:
-
-```
-require("@nomiclabs/hardhat-waffle");
-
-/**
- * @type import('hardhat/config').HardhatUserConfig
- */
+/** @type import('hardhat/config').HardhatUserConfig */
 
 const Private_Key = "INSERT_PRIV_KEY"
 
 module.exports = {
-  solidity: "0.8.0",
   networks: {
-  	atago: {
-  		url: `http://faucet.mamba.atago/`,
-  		accounts: [`0x${Private_Key}`]
-  	}
-  }
+    atago: {
+        url: `http://faucet.mamba.atago/`,
+        accounts: [`0x${Private_Key}`]
+    },
+  },
+  solidity: "0.8.17",
 };
 ```
 
-## Compile Contracts
+## Step 03 - Compile & Deploy
+
+- To compile Solidity files in the `contracts/` directory of your Hardhat project execute `npx hardhat compile`:
 
 ```
 $ npx hardhat compile
 ```
 
-## Deploying to the example EVM sidechain testnet
+Deploying with Hardhat utilizes deployment scripts located in `scripts/`. 
 
-Deploying with Hardhat utilizes deployment scripts located in `scripts/`. To deploy with Hardhat, execute the script with `atago` as the network option.
+- To deploy with Hardhat, execute the deploy script with `atago` as the network option.
 
 ```
-$ npx hardhat run scripts/sample-script.js --network atago
+$ npx hardhat run scripts/deploy.js --network atago
 Greeter deployed to: 0x95E1C8F6C00d8cB518faBA33c8Ae814fc12E3090
 ```
 
-🎉 Hurray! You're deployed to Atago, the example EVM sidechain testnet, and can search your deployment on the [testnet explorer]( http://explorer.mamba.atago/) 
-   
+🎉 Hurray! You deployed your smart contract to Atago, the Cardano EVM sidechain testnet, and can search your deployment on the [testnet explorer]( http://explorer.mamba.atago/).
+
 # Truffle
 
-Install the following dependencies to set up a Truffle development environment:
+This tutorial will show you how to deploy a solidity smart contract to the EVM sidechain testnet using Truffle. [Truffle](https://trufflesuite.com/truffle/) is a popular development framework for EVM-based applications.
 
-- [Node.js v8](https://nodejs.org/en/) or later
-- [Truffle](https://trufflesuite.com/truffle/)
+## Prerequisites
+
+Install the following dependencies:
+
+- [Node.js](https://github.com/nvm-sh/nvm) version 8 or later.
+- [Truffle Suite](https://trufflesuite.com/truffle/)
 
 Check Node.js and NPM are installed:
 
@@ -268,45 +270,31 @@ Install Truffle and check Truffle is installed:
 ```
 $ npm install -g truffle
 $ truffle version
-Truffle v5.4.32 (core: 5.4.32)
-Solidity v0.5.16 (solc-js)
-Node v14.18.2
-Web3.js v1.5.3
 ```
 
-## Truffle Config
+## Step 1 - Configure Truffle
 
-Update the Truffle configuration file with Atago credentials. Atago is the name of the example EVM sidechain testnet.
+You need a Truffle project before you can configure Truffle to deploy on the EVM sidechain testnet. This demonstration will use the [React Truffle Box](https://trufflesuite.com/boxes/react/).
+
+- Create a new project directory for your Truffle project and unbox the React Truffle Box:
 
 ```
-module.exports = {
-  networks: {
-    development: {
-      host: "127.0.0.1",
-      port: 8545,
-      network_id: "*" // Match any network id
-    },
-	atago: {
-      provider: () => new HDWalletProvider(mnemonic, `https://atago-passive-0.pilz.iohkdev.io/`),
-      port: 9001,
-      network_id: "*" // Match any network id
-    },
-  },
-  compilers: {
-    solc: {
-      version: "^0.8.0"
-    }
-  }
-};
+$ mkdir React-Truffle
+$ cd React-Truffle
+$ truffle unbox react
 ```
 
-## Deploying to Atago
+- Configure Truffle to use the EVM sidechain testnet (Atago) by adding the following in `React-Truffle/truffle/truffle-config.js` > Line 45. Remove the comment on Line 25.
+- Replace `YOUR_SEED_PHRASE` with your mnemonic phrase.
 
-Add gas to your wallet using the [Atago faucet](http://faucet-web.mamba.atago).
-Finally, deploy your contract by executing `truffle migrate --network atago`.
+## Step - Truffle Migrate
+
+At this point, you've defined the EVM sidechain testnet and your testnet account to sign smart contract deployments. So, you're ready to deploy!
+
+- Within the `truffle/` directory of our project, execute `truffle migrate` while passing `atago` for the `--network` parameter:
 
 ```
 $ truffle migrate --network atago
 ```
 
-🎉 At this point you're deployed and can view your deployment on the [testnet explorer]( http://explorer.mamba.atago/)
+Upon executing `truffle migrate`, Truffle will return the transaction hash and contract address which can be searched on the EVM sidechain testnet explorer [here](http://explorer.mamba.atago/).
