--- a/content/08-cardano-sidechains/03-example-evm-sidechains/06-api.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/06-api.mdx
@@ -1,11 +1,19 @@
 ---
-title: API Methods
-metaTitle: API Methods
+title: JSON-RPC API
+metaTitle: JSON-RPC API
 ---
 
-The list below shows which Ethereum API methods are currently implemented in the Cardano EVM sidechain. For details of each method, you can refer to the [Ethereum JSON-RPC Specification](https://playground.open-rpc.org/?schemaUrl=https://raw.githubusercontent.com/ethereum/eth1.0-apis/assembled-spec/openrpc.json&uiSchema%5BappBar%5D%5Bui:splitView%5D=false&uiSchema%5BappBar%5D%5Bui:input%5D=false&uiSchema%5BappBar%5D%5Bui:examplesDropdown%5D=false).
+Interacting with the sidechain requires sending requests to specific JSON-RPC API methods. The Cardano EVM sidechain supports most standard Ethereum JSON-RPC API endpoints with a few exceptions described below.
 
-If your product requires a method that is not currently implemented, please contact Input Output Global support.
+## Specification
+
+The Cardano EVM sidechain supports [OpenRPC](https://open-rpc.org/)'s `rpc.discover` service discovery method that will return the OpenRPC scheme for the JSON-RPC API. You can easily validate and preview the schema on the [OpenRPC Playground](https://playground.open-rpc.org/?schemaUrl=http://faucet.mamba.atago/).
+
+## Supported Methods
+
+The list below shows which Ethereum API methods are currently implemented in the Cardano EVM sidechain. For details of each method, you can refer to the [JSON-RPC specification](https://playground.open-rpc.org/?schemaUrl=http://faucet.mamba.atago/).
+
+*If your product requires a method that is not currently implemented, please contact Input Output Global support.*
 
 # Available methods
 
@@ -23,13 +31,23 @@ If your product requires a method that is not currently implemented, please cont
 - `eth_getBlockTransactionCountByNumber`
 - `eth_accounts`  
 - `eth_blockNumber` 
+- `eth_sign`
 - `eth_getTransactionByHash`  
 - `eth_getTransactionCount`  
 - `eth_chainId`  
 - `net_version`  
-- `web3_clientVersion`  
+- `web3_clientVersion`
+- `txpool_content`
 
-### Test methods
+## Bridge methods
+
+These methods are specifically implemented to support bridge operations.
+
+- `sidechain_getCandidates`
+- `sidechain_getCommittee`
+- `sidechain_getMainchainStatus`
+
+## Test methods
 
 These methods are in the Cardano EVM sidechain with their input/output types, but are not fully implemented yet. They just return an error and do nothing.  
 
@@ -39,20 +57,20 @@ These methods are in the Cardano EVM sidechain with their input/output types, bu
 - `test_setChainParams`  
 - `test_importRawBlock`
 
-### Debug methods  
+## Debug methods  
 
 These methods are there but they are specifically implemented to be just good enough for ETS.  
 
 They are only available for the test node.  
 
-They do not really capture every possible storage address. As ETS uses trivial addresses such as 1-10 we only check those.  
+They do not capture every possible storage address. As ETS uses trivial addresses such as 1-10 we only check those.  
 
 For accounts, we only check accounts that are known to exist (ie. they are in the genesis) but if an account is created inside a transaction we won’t return it.  
 
 - `debug_storageRangeAt`: optional  
 - `debug_accountRange`: optional  
 
-### Support for test tooling (Web3.js, Metamask…)
+## Support for test tooling (Web3.js, Metamask…)
 
 - `personal_newAccount`  
 - `personal_listAccounts`  
@@ -84,7 +102,7 @@ For accounts, we only check accounts that are known to exist (ie. they are in th
 
 The whole trace/debug module  
 
-### Irrelevant methods
+# Irrelevant methods
 
 The following methods are irrelevant for the Cardano EVM sidechain because they are specific to proof of work. They can be implemented to return a fixed value if needed.  
 
