--- a/content/07-cardano-components/05-cardano-db-sync/05-big-query.mdx
+++ b/content/07-cardano-components/05-cardano-db-sync/05-big-query.mdx
@@ -5,10 +5,7 @@ metaTitle: Cardano blockchain data on BigQuery
 
 ## Cardano on-chain data on BigQuery
 
-We maintain a dedicated site with documentation and example queries:
-
-[input-output-hk/data-analytics-bigquery](https://github.com/input-output-hk/data-analytics-bigquery/wiki)
-
+> A dedicated site with [BigQuery documntation and example queries can be found here](https://github.com/input-output-hk/data-analytics-bigquery/wiki). 
 
 ## About BigQuery
 
@@ -118,9 +115,9 @@ shows the results of data validation for all tables.
 
 ## Query table schemas
 
-Access our [Cardano on BigQuery - data schema browser](https://datastudio.google.com/reporting/0d60645a-95dd-4531-b85d-7b811fadc351).
+Access [Cardano on BigQuery - data schema browser](https://datastudio.google.com/reporting/0d60645a-95dd-4531-b85d-7b811fadc351).
 
-The [wiki](https://github.com/input-output-hk/data-analytics-bigquery/wiki/Database-schema) also contains more information about the table schema.
+The [wiki](https://github.com/input-output-hk/data-analytics-bigquery/wiki/Database-schema) also contains more information about table schemas.
 
 ## Further development
 
@@ -129,4 +126,4 @@ In its future iterations, this dataset on BigQuery will cover even more Cardano 
 will be updating this section with more details.
 
 To raise an issue or share your feedback, please reach out to
-data-analytics@iohk.io .
+data-analytics@iohk.io.
