--- a/content/07-cardano-components/05-cardano-db-sync/05-big-query.mdx
+++ b/content/07-cardano-components/05-cardano-db-sync/05-big-query.mdx
@@ -5,7 +5,7 @@ metaTitle: Cardano blockchain data on BigQuery
 
 ## Cardano on-chain data on BigQuery
 
-> A dedicated site with [BigQuery documntation and example queries can be found here](https://github.com/input-output-hk/data-analytics-bigquery/wiki). 
+> A dedicated site with [BigQuery documentation and example queries can be found here](https://github.com/input-output-hk/data-analytics-bigquery/wiki). 
 
 ## About BigQuery
 
