fix: update metamask with known issues

--- a/content/08-cardano-sidechains/03-example-evm-sidechains/01-metamask.mdx
+++ b/content/08-cardano-sidechains/03-example-evm-sidechains/01-metamask.mdx
@@ -5,7 +5,9 @@ metaTitle: Create or Import Account with MetaMask
 
 ## Install MetaMask
 
-Use this link to install MetaMask as a browser extension or mobile app: https://metamask.io/
+*MetaMask compatibility with the sidechain is officially tested with Google Chrome and Brave web browsers.*
+
+Use this link to install MetaMask as a browser extension or mobile app: https://metamask.io/.
 
 ![install-meta-mask](https://user-images.githubusercontent.com/10556209/148433190-2aabc719-67fb-40f3-a459-0f5f0d81e169.png)
 
@@ -29,5 +31,10 @@ Settings > Networks > Add Network > Input the following settings and save.
 Now you can select the Cardano EVM sidechain network from MetaMask:
 
 ![select-network](https://user-images.githubusercontent.com/10556209/153285688-bac47217-57ad-4f98-8aa1-c26d57fc407e.PNG)
+
+## Known Issues
+
+- If the sidechain network was added correctly, but MetaMask does not send transactions, update balance, or simply not interact with the chain, then try to [Reset your MetaMask account](https://metamask.zendesk.com/hc/en-us/articles/360015488891-How-to-reset-an-account).
+- MetaMask compatibility with the sidechain is officially tested with Google Chrome and Brave web browsers. To avoid browser compatbility issues, use Google Chrome or Brave.
   
 <sup>1</sup> Temporary name  
